# irisService_java

Windows SDK_3.23.6_x64_Eng/: Java Demo video 2025-04-16 13-50-58.mkv  README-运行说明.md  Readme.docx  build.ps1  clean.ps1  run-only.ps1  run.ps1
Windows SDK_3.23.6_x64_Eng/pidsdk-amd64-v3.23.6/src/iriseng_console/: CMakeLists.txt  console.cpp
Windows SDK_3.23.6_x64_Eng/pidsdk-java-v1.2/pidsdk-java/: gradle.properties  local.properties  settings.gradle.kts
Windows SDK_3.23.6_x64_Eng/pidsdk-java-v1.2/pidsdk-java/app/: build.gradle.kts
Windows SDK_3.23.6_x64_Eng/pidsdk-java-v1.2/pidsdk-java/app/gradle/wrapper/: gradle-wrapper.properties
Windows SDK_3.23.6_x64_Eng/pidsdk-java-v1.2/pidsdk-java/app/src/main/java/: module-info.java
Windows SDK_3.23.6_x64_Eng/pidsdk-java-v1.2/pidsdk-java/doc/: README-Linux.md  README-Windows.md
Windows SDK_3.23.6_x64_Eng/pidsdk-java-v1.2/pidsdk-java/gradle/: libs.versions.toml
Windows SDK_3.23.6_x64_Eng/pidsdk-java-v1.2/pidsdk-java/gradle/wrapper/: gradle-wrapper.properties
Windows SDK_3.23.6_x64_Eng/pidsdk-java-v1.2/pidsdk-java/libIrisHelper/: build.gradle.kts
Windows SDK_3.23.6_x64_Eng/pidsdk-java-v1.2/pidsdk-java/libIrisHelper/src/main/cpp/IrisEngineHelper/: IrisEngineHelper.cpp  IrisEngineHelper.h  build.sh
Windows SDK_3.23.6_x64_Eng/pidsdk-java-v1.2/pidsdk-java/libIrisHelper/src/main/java/: module-info.java
Windows SDK_3.23.6_x64_Eng/win_pidsdk_3.23.6_x64/inc/: irisengine_export.h
Windows SDK_3.23.6_x64_Eng/win_pidsdk_3.23.6_x64/lib/: libirisengine.lib
(+7 files in other folders)
